# IPC_Testing

./: .gitignore  CMakeLists.txt  IPC_Testing.kdev4  client.cpp  server.cpp
.kdev4/: IPC_Testing.kdev4
ipc/: CMakeLists.txt  UnixSocket.h  UnixSocketClient.cpp  UnixSocketClient.h  UnixSocketServer.cpp  UnixSocketServer.h
